# youtube_usage

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
notebooks/: eda.ipynb
src/youtube_usage/: __init__.py  __main__.py
src/youtube_usage/pipelines/data_processing/: nodes.py  pipeline.py
